[package]
name = "robomaster-s1-proto"
version = "0.2.1"
edition = "2021"
authors = ["Fan Jiang"]
license = "MIT OR Apache-2.0"
description = "Rust implementation of the RoboMaster S1 CAN protocol"
keywords = ["robomaster", "protocol", "can", "robotics", "no_std"]
readme = "README.md"
repository = "https://github.com/ProfFan/robomaster-s1-proto"

[dependencies]
bytemuck = { version = "1.16.*", features = ["derive"] }
num_enum = { version = "0.6.*", default-features = false }

[dev-dependencies]
clap = { version = "4.5.13", features = ["derive"] }
candump-parse = "0.1.*"
chumsky = "0.9.*"
